--- a/index.html
+++ b/index.html
@@ -1,65 +1,164 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="./css/style.css" />
-  </head>
 
-  <body>
-    <div class="container">
-      <div class="wrapper">
-        <div class="row">
-          <h1>TECH WICH</h1>
-          <p>Programming and technology course</p>
-          <lottie-player src="https://assets2.lottiefiles.com/packages/lf20_pyawb2b1.json"  background="transparent"  speed="1"    loop autoplay></lottie-player>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="./css/slick.css">
+  <link rel="stylesheet" href="./css/slick-theme.css">
 
-          <!-- <lottie-player
-            src="https://assets1.lottiefiles.com/private_files/lf30_iwha7oma.json"
-            background="transparent"
-            speed="1"
-            style="width: 400px; height: 300px"
-            loop
-            autoplay
-          ></lottie-player> -->
-          <button>Start Here!</button>
+
+</head>
+
+<body>
+  <div class="container">
+    <div class="wrapper">
+      <div class="row">
+        <h1>TECH WICH</h1>
+        <p>Programming and technology course</p>
+        <lottie-player src="https://assets2.lottiefiles.com/packages/lf20_pyawb2b1.json" background="transparent"
+          speed="1" loop autoplay></lottie-player>
+
+        <button class="btn">Start Here!</button>
+      </div>
+      <div class="row">
+        <h1>TOP COURSES</h1>
+        <div class="images">
+          <figure>
+            <img src="./img/python.svg" alt="python" />
+            <h2>PYTHON</h2>
+            <p>40 LECTURES</br>Level:Biginners</br>Instructor:Mohammad</p>
+          </figure>
+          <figure>
+            <img src="./img/java.svg" alt="java" />
+            <h2>JAVA</h2>
+            <p>50 LECTURES</br>Level:Intermdiate</br>Instructor:Ramin</p>
+          </figure>
+          <figure>
+            <img src="./img/java.svg" alt="java" />
+            <h2>JAVA</h2>
+            <p>50 LECTURES</br>Level:Intermdiate</br>Instructor:Ramin</p>
+          </figure>
         </div>
-        <div class="row">
-          <h1>TOP COURSES</h1>
-          <div class="images">
-            <figure>
-              <img src="./img/python.svg" alt="python" />
-              <h2>PYTHON</h2>
-              <p>40 LECTURES</br>Level:Biginners</br>Instructor:Mohammad</p>
-            </figure>
-            <figure>
-              <img src="./img/java.svg" alt="java" />
-              <h2>JAVA</h2>
-              <p>50 LECTURES</br>Level:Intermdiate</br>Instructor:Ramin</p>
-            </figure>
-            <figure>
-              <img src="./img/java.svg" alt="java" />
-              <h2>JAVA</h2>
-              <p>50 LECTURES</br>Level:Intermdiate</br>Instructor:Ramin</p>
-            </figure>
+      </div>
+      <div class="row">
+        <div class="flex">
+          <div>
+            <h1>TECH WICH</h1>
+            <p>Programming and technology course</p>
+            <img src="./img/coding.svg" alt="" />
+            <button class="btn">Start Here!</button>
           </div>
+          <lottie-player src="https://assets2.lottiefiles.com/packages/lf20_mragdxra.json" background="transparent"
+            speed="1" loop autoplay></lottie-player>
         </div>
-        <div class="row">
-          <div class="flex">
-            <div>
-              <h1>TECH WICH</h1>
-              <p>Programming and technology course</p>
-              <img src="./img/coding.svg" alt="" />
-              <button>Start Here!</button>
-            </div>
-            <lottie-player  src="https://assets2.lottiefiles.com/packages/lf20_mragdxra.json"  background="transparent"  speed="1"  loop autoplay></lottie-player>
+      </div>
+      <div class="row">
+        <h1>SUGGESTED</h1>
+        <div class="responsive">
+          <div>
+            <img src="./img/user1.jpg">
+            <h2>USER PYTHON</h2>
+            <p>50 FOLLOWERS</br>25 LLectures</br>Level 2</p>
+          </div>
+          <div>
+            <img src="./img/user2.jpg">
+            <h2>USER2</h2>
+            <p>50 FOLLOWERS</br>25 LLectures</br>Level 2</p>
+          </div>
+          <div>
+            <img src="./img/user3.jpg">
+            <h2>USER2</h2>
+            <p>50 FOLLOWERS</br>25 LLectures</br>Level 2</p>
+          </div>
+          <div>
+            <img src="./img/user4.jpg">
+            <h2>USER2</h2>
+            <p>50 FOLLOWERS</br>25 LLectures</br>Level 2</p>
+
+          </div>
+          <div>
+            <img src="./img/user5.jpg">
+            <h2>USER2</h2>
+            <p>50 FOLLOWERS</br>25 LLectures</br>Level 2</p>
+
+          </div>
+          <div>
+            <img src="./img/user6.jpg">
+            <h2>USER2</h2>
+            <p>50 FOLLOWERS</br>25 LLectures</br>Level 2</p>
+
+          </div>
+          <div>
+            <img src="./img/user7.jpg">
+            <h2>USER2</h2>
+            <p>50 FOLLOWERS</br>25 LLectures</br>Level 2</p>
+          </div>
+          <div>
+            <img src="./img/user8.jpg">
+            <h2>USER2</h2>
+            <p>50 FOLLOWERS</br>25 LLectures</br>Level 2</p>
           </div>
         </div>
       </div>
     </div>
+  </div>
 
-    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-  </body>
+  
+  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+
+  <script src="./jquery.min.js"></script>
+  <script src="./slick.js"></script>
+  <script>
+    $(document).ready(function () {
+
+      $('.responsive').slick({
+        dots: true,
+        infinite: false,
+        mobileFirst:true,
+        speed: 300,
+        slidesToShow: 4,
+        slidesToScroll: 4,
+        responsive: [
+          {
+            breakpoint: 1024,
+            settings: {
+              slidesToShow: 3,
+              slidesToScroll: 3,
+              infinite: true,
+              dots: true
+            }
+          },
+          {
+            breakpoint: 600,
+            settings: {
+              slidesToShow: 2,
+              slidesToScroll: 2
+            }
+          },
+          {
+            breakpoint: 480,
+            settings: {
+              slidesToShow: 1,
+              slidesToScroll: 1
+            }
+          },
+          {
+            breakpoint: 300,
+            settings: {
+              slidesToShow: 1,
+              slidesToScroll: 1
+            }
+          }
+        ]
+      });
+        
+
+    });
+  </script>
+</body>
+
 </html>
