--- a/index.html
+++ b/index.html
@@ -15,7 +15,14 @@
 
 <body>
   <div class="container">
+
+    <!-- wrapper of rows -->
+
+
     <div class="wrapper">
+
+      <!-- start of rows -->
+
       <div class="row">
         <h1>TECH WICH</h1>
         <p>Programming and technology course</p>
@@ -58,6 +65,9 @@
       </div>
       <div class="row">
         <h1>SUGGESTED</h1>
+
+        <!-- user slider -->
+
         <div class="responsive">
           <div>
             <img src="./img/user1.jpg">
@@ -104,12 +114,15 @@
           </div>
         </div>
       </div>
+
+      <!-- end of rows -->
+
     </div>
   </div>
 
+  <!-- scripts  -->
   
   <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-
   <script src="./jquery.min.js"></script>
   <script src="./slick.js"></script>
   <script src="./script.js"></script>
