--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
   <link rel="stylesheet" href="./css/style.css" />
   <link rel="stylesheet" href="./css/slick.css">
   <link rel="stylesheet" href="./css/slick-theme.css">
-
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 
 </head>
 
 <body>
-  <div class="container">
+  <div class="containers">
 
     <!-- wrapper of rows -->
 
@@ -23,15 +25,15 @@
 
       <!-- start of rows -->
 
-      <div class="row">
+      <div class="rows">
         <h1>TECH WICH</h1>
         <p>Programming and technology course</p>
         <lottie-player src="https://assets2.lottiefiles.com/packages/lf20_pyawb2b1.json" background="transparent"
           speed="1" loop autoplay></lottie-player>
 
-        <button class="btn">Start Here!</button>
+        <button class="btn-purple">Start Here!</button>
       </div>
-      <div class="row">
+      <div class="rows">
         <h1>TOP COURSES</h1>
         <div class="images">
           <figure>
@@ -51,19 +53,19 @@
           </figure>
         </div>
       </div>
-      <div class="row">
+      <div class="rows">
         <div class="flex">
           <div>
             <h1>TECH WICH</h1>
             <p>Programming and technology course</p>
             <img src="./img/coding.svg" alt="" />
-            <button class="btn">Start Here!</button>
+            <button class="btn-purple">Start Here!</button>
           </div>
           <lottie-player src="https://assets2.lottiefiles.com/packages/lf20_mragdxra.json" background="transparent"
             speed="1" loop autoplay></lottie-player>
         </div>
       </div>
-      <div class="row">
+      <div class="rows sliderow">
         <h1>SUGGESTED</h1>
 
         <!-- user slider -->
@@ -114,18 +116,234 @@
           </div>
         </div>
       </div>
+      <div class="rows course-slide">
+        <h2>Top Popular<mark>Course</mark></h2>
+        <div class="responsive ">
 
+          <!--strat of bootstrap cards -->
+
+          <div class="card" style="width: 18rem;">
+            <div class="lables">
+              <span>HTML</span>
+              <span>CSS</span>
+            </div>
+            <img src="./img/programming-coding.jpg" class="card-img-top" alt="...">
+            <span class="price">$79</span>
+            <div class="card-body">
+              <div class="detail-course">
+                <div>
+                  <i class="fas fa-chart-bar"></i>
+                  <span>Begginers</span>
+                </div>
+                <div>
+                  <i class="far fa-clock"></i>
+                  <span>5 week</span>
+                </div>
+              </div>
+              <div class="Introduction">
+                <h5 class="card-title">css basics</h5>
+                <div>
+                <img src="./img/user2.jpg" alt="">
+                <p>Abbas BooAzar</p>
+              </div>
+              </div>
+              <div class="card-footer">
+                <div>
+                  <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                    class="fas fa-star"></i><i class="fas fa-star"></i>
+                </div>
+                <a href="#">Read More <i class="far fa-long-arrow-right"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <div class="lables">
+              <span>Java</span>
+              <span>C++</span>
+            </div>
+            <img src="./img/programming-coding.jpg" class="card-img-top" alt="...">
+            <span class="price">$79</span>
+            <div class="card-body">
+              <div class="detail-course">
+                <div>
+                  <i class="fas fa-chart-bar"></i>
+                  <span>Advance</span>
+                </div>
+                <div>
+                  <i class="far fa-clock"></i>
+                  <span>5 week</span>
+                </div>
+              </div>
+              <div class="Introduction">
+                <h5 class="card-title">The Basic Of oop in C++</h5>
+                <div>
+                <img src="./img/user2.jpg" alt="">
+                <p>Abbas BooAzar</p>
+              </div>
+              </div>
+              <div class="card-footer">
+                <div>
+                  <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                    class="fas fa-star"></i><i class="fas fa-star"></i>
+                </div>
+                <a href="#">Read More <i class="far fa-long-arrow-right"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <div class="lables">
+              <span>Java</span>
+              <span>Android</span>
+            </div>
+            <img src="./img/programming-coding.jpg" class="card-img-top" alt="...">
+            <span class="price">$79</span>
+            <div class="card-body">
+              <div class="detail-course">
+                <div>
+                  <i class="fas fa-chart-bar"></i>
+                  <span>Advance</span>
+                </div>
+                <div>
+                  <i class="far fa-clock"></i>
+                  <span>5 week</span>
+                </div>
+              </div>
+              <div class="Introduction">
+                <h5 class="card-title">Java Android Basic course</h5>
+                <div>
+                <img src="./img/user2.jpg" alt="">
+                <p>Abbas BooAzar</p>
+              </div>
+              </div>
+              <div class="card-footer">
+                <div>
+                  <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                    class="fas fa-star"></i><i class="fas fa-star"></i>
+                </div>
+                <a href="#">Read More <i class="far fa-long-arrow-right"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <div class="lables">
+              <span>HTML</span>
+              <span>CSS</span>
+            </div>
+            <img src="./img/programming-coding.jpg" class="card-img-top" alt="...">
+            <span class="price">$79</span>
+            <div class="card-body">
+              <div class="detail-course">
+                <div>
+                  <i class="fas fa-chart-bar"></i>
+                  <span>Begginers</span>
+                </div>
+                <div>
+                  <i class="far fa-clock"></i>
+                  <span>5 week</span>
+                </div>
+              </div>
+              <div class="Introduction">
+                <h5 class="card-title">css basics</h5>
+                <div>
+                <img src="./img/user2.jpg" alt="">
+                <p>Abbas BooAzar</p>
+              </div>
+              </div>
+              <div class="card-footer">
+                <div>
+                  <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                    class="fas fa-star"></i><i class="fas fa-star"></i>
+                </div>
+                <a href="#">Read More <i class="far fa-long-arrow-right"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <div class="lables">
+              <span>Java</span>
+              <span>C++</span>
+            </div>
+            <img src="./img/programming-coding.jpg" class="card-img-top" alt="...">
+            <span class="price">$79</span>
+            <div class="card-body">
+              <div class="detail-course">
+                <div>
+                  <i class="fas fa-chart-bar"></i>
+                  <span>Advance</span>
+                </div>
+                <div>
+                  <i class="far fa-clock"></i>
+                  <span>5 week</span>
+                </div>
+              </div>
+              <div class="Introduction">
+                <h5 class="card-title">The Basic Of oop in C++</h5>
+                <div>
+                <img src="./img/user2.jpg" alt="">
+                <p>Abbas BooAzar</p>
+              </div>
+              </div>
+              <div class="card-footer">
+                <div>
+                  <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                    class="fas fa-star"></i><i class="fas fa-star"></i>
+                </div>
+                <a href="#">Read More <i class="far fa-long-arrow-right"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <div class="lables">
+              <span>Java</span>
+              <span>Android</span>
+            </div>
+            <img src="./img/programming-coding.jpg" class="card-img-top" alt="...">
+            <span class="price">$79</span>
+            <div class="card-body">
+              <div class="detail-course">
+                <div>
+                  <i class="fas fa-chart-bar"></i>
+                  <span>Advance</span>
+                </div>
+                <div>
+                  <i class="far fa-clock"></i>
+                  <span>5 week</span>
+                </div>
+              </div>
+              <div class="Introduction">
+                <h5 class="card-title">Java Android Basic course</h5>
+                <div>
+                <img src="./img/user2.jpg" alt="">
+                <p>Abbas BooAzar</p>
+              </div>
+              </div>
+              <div class="card-footer">
+                <div>
+                  <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                    class="fas fa-star"></i><i class="fas fa-star"></i>
+                </div>
+                <a href="#">Read More <i class="far fa-long-arrow-right"></i></a>
+              </div>
+            </div>
+          </div>
+          <!-- end of cards -->
+
+        </div>
+      </div>
       <!-- end of rows -->
 
     </div>
   </div>
 
   <!-- scripts  -->
-  
+
   <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
   <script src="./jquery.min.js"></script>
   <script src="./slick.js"></script>
   <script src="./script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous">
+  </script>
 </body>
 
 </html>
