change in user slider

--- a/index.html
+++ b/index.html
@@ -66,53 +66,66 @@
         </div>
       </div>
       <div class="rows sliderow">
-        <h1>SUGGESTED</h1>
+        <h1>FOLLOW SUGGESTED</h1>
 
         <!-- user slider -->
 
         <div class="responsive">
           <div>
             <img src="./img/user1.jpg">
-            <h2>USER PYTHON</h2>
+            <h3>Abbas Buazar</h3>
             <p>50 FOLLOWERS</br>25 LLectures</br>Level 2</p>
+            <button class="btn btn-primary">follow</button>
           </div>
           <div>
             <img src="./img/user2.jpg">
-            <h2>USER2</h2>
+            <h3>Mohammad Arkon</h3>
             <p>50 FOLLOWERS</br>25 LLectures</br>Level 2</p>
+            <button class="btn btn-primary">follow</button>
+
           </div>
           <div>
             <img src="./img/user3.jpg">
-            <h2>USER2</h2>
+            <h3>Chester Charls</h3>
             <p>50 FOLLOWERS</br>25 LLectures</br>Level 2</p>
+            <button class="btn btn-primary">follow</button>
+
           </div>
           <div>
             <img src="./img/user4.jpg">
-            <h2>USER2</h2>
+            <h3>USER2</h3>
             <p>50 FOLLOWERS</br>25 LLectures</br>Level 2</p>
+            <button class="btn btn-primary">follow</button>
 
           </div>
           <div>
             <img src="./img/user5.jpg">
-            <h2>USER2</h2>
+            <h3>USER2</h3>
             <p>50 FOLLOWERS</br>25 LLectures</br>Level 2</p>
+            <button class="btn btn-primary">follow</button>
+
 
           </div>
           <div>
             <img src="./img/user6.jpg">
-            <h2>USER2</h2>
+            <h3>USER2</h3>
             <p>50 FOLLOWERS</br>25 LLectures</br>Level 2</p>
+            <button class="btn btn-primary">follow</button>
 
           </div>
           <div>
             <img src="./img/user7.jpg">
-            <h2>USER2</h2>
+            <h3>USER2</h3>
             <p>50 FOLLOWERS</br>25 LLectures</br>Level 2</p>
+            <button class="btn btn-primary">follow</button>
+
           </div>
           <div>
             <img src="./img/user8.jpg">
-            <h2>USER2</h2>
+            <h3>USER2</h3>
             <p>50 FOLLOWERS</br>25 LLectures</br>Level 2</p>
+            <button class="btn btn-primary">follow</button>
+
           </div>
         </div>
       </div>
