edit change user slide

--- a/index.html
+++ b/index.html
@@ -74,34 +74,34 @@
           <div>
             <img src="./img/user1.jpg">
             <h3>Abbas Buazar</h3>
-            <p>50 FOLLOWERS</br>25 LLectures</br>Level 2</p>
+            <p>0 FOLLOWERS</br>0 Following</br>Level 2</p>
             <button class="btn btn-primary">follow</button>
           </div>
           <div>
             <img src="./img/user2.jpg">
             <h3>Mohammad Arkon</h3>
-            <p>50 FOLLOWERS</br>25 LLectures</br>Level 2</p>
+            <p>50 FOLLOWERS</br>0 Following</br>Level 2</p>
             <button class="btn btn-primary">follow</button>
 
           </div>
           <div>
             <img src="./img/user3.jpg">
             <h3>Chester Charls</h3>
-            <p>50 FOLLOWERS</br>25 LLectures</br>Level 2</p>
+            <p>50 FOLLOWERS</br>0 Following</br>Level 2</p>
             <button class="btn btn-primary">follow</button>
 
           </div>
           <div>
             <img src="./img/user4.jpg">
             <h3>USER2</h3>
-            <p>50 FOLLOWERS</br>25 LLectures</br>Level 2</p>
+            <p>50 FOLLOWERS</br>0 Following</br>Level 2</p>
             <button class="btn btn-primary">follow</button>
 
           </div>
           <div>
             <img src="./img/user5.jpg">
             <h3>USER2</h3>
-            <p>50 FOLLOWERS</br>25 LLectures</br>Level 2</p>
+            <p>50 FOLLOWERS</br>0 Following</br>Level 2</p>
             <button class="btn btn-primary">follow</button>
 
 
@@ -109,21 +109,21 @@
           <div>
             <img src="./img/user6.jpg">
             <h3>USER2</h3>
-            <p>50 FOLLOWERS</br>25 LLectures</br>Level 2</p>
+            <p>50 FOLLOWERS</br>0 Following</br>Level 2</p>
             <button class="btn btn-primary">follow</button>
 
           </div>
           <div>
             <img src="./img/user7.jpg">
             <h3>USER2</h3>
-            <p>50 FOLLOWERS</br>25 LLectures</br>Level 2</p>
+            <p>50 FOLLOWERS</br>0 Following</br>Level 2</p>
             <button class="btn btn-primary">follow</button>
 
           </div>
           <div>
             <img src="./img/user8.jpg">
             <h3>USER2</h3>
-            <p>50 FOLLOWERS</br>25 LLectures</br>Level 2</p>
+            <p>50 FOLLOWERS</br>0 Following</br>Level 2</p>
             <button class="btn btn-primary">follow</button>
 
           </div>
