--- a/profile.html
+++ b/profile.html
@@ -13,7 +13,7 @@
     <div class="grid">
         <div class="culmn">
             <div class="profile">
-                <img src="./img/profile.svg" alt="profile">
+                <img src="./img/user2.jpg" alt="profile">
                 <span>Edogaru</span>
                 <p>Edogaru@gmail.com.my</p>
             </div>
