--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <img src="./img/user6.jpg">
             <h3>USER2</h3>
             <p>50 FOLLOWERS</br>0 Following</br>Level 2</p>
-            <button class="btn btn-primary">follow</button>
+            <button class="btn btn-">follow</button>
 
           </div>
           <div>
